syntax = "proto3";

package com.jackgallaher.smartprojectors;



option csharp_namespace = "smartprojectors";

service smartProjectors{

	rpc switchOn(Empty) returns (PowerStatus) {}
    rpc switchOff(Empty) returns (PowerStatus) {}
    rpc inputHDMI(Empty) returns (Response) {}
    rpc inputVGA(Empty) returns (Response) {}

}

message PowerStatus{
    bool status = 1;
    }
     
message Response{
	string text = 1;
}

message Empty{

}